Fixed text alignment on the tables

--- a/laravel/public/assets/css/elements/tables.css
+++ b/laravel/public/assets/css/elements/tables.css
@@ -93,6 +93,7 @@ table
 			li
 			{
 				align-items: center;
+				text-align: left;
 				width: 100%;
 
 				&::before
